--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-Sure! I will take the content from your old homepage and create a new HTML file for you. Here's the simplified version of your homepage without unnecessary scripts and outdated references:
-
-### New HTML Code
-
 ```html
 <!DOCTYPE html>
 <html lang="en">
@@ -127,3 +123,34 @@ Sure! I will take the content from your old homepage and create a new HTML file 
                 <p>
                     Det Snok kan förlita sig på utöver sin rikedom, är även sitt trogna manskap; ett pack med joviala mannar som gärna dricker mjöd,
                     skryter och skrattar högt. Män som inte drar sig för att bruka vapen när så krävs, mannar som för
+
+tjänat sin plats i Snoks följe
+                    genom utförda kraftdåd och bevisad lojalitet. Få stormän i Hunaland kan skryta att deras manskap är så trogna sin herre som
+                    Snok. Och även om Hersar och Hövdingar kan visa upp välrustade Hirdmän i gott antal, så är det ändock få som kan samla lika
+                    mycket erfaret folk som Snok när det gäller att dräpa, slåss, plundra och skövla; för sant är det ändå, att när Snok blev
+                    Hövding i Sumprakan så syntes färre rövare till i Hunaland, men desto fler på andra sidan gränsen.
+                </p>
+                <p>
+                    Och på tal om Hirdmän, så har ätten Rind tjugo av sin hird i Sumprakan där dom öppet tränar Snoks huskarlar i linjestrid,
+                    sköldmur och allmän stridsteknik med svärd, yxa, spjut och sköld. Sumprakans huskarlar, som lärt sig strida i erfarenhetens
+                    hårda skola, får nu utöver det även lära sig den nedärvda kunskapen från tidigare generationers hirdmän och hjältar.
+                </p>
+            </div>
+        </section>
+        <section>
+            <div class="section-title">Sumpmål</div>
+            <div class="content">
+                <p>
+                    Något som slår dom flesta när dom stöter på folk från Sumprakan är den säregna dialekten folket från denna trakt ligger inne på.
+                    Sumpmål innehåller bland annat hårda R som rullar av tungan och kraftiga Ö ljud som börjar långt bak i strupen. Grova skämt
+                    och uppkäftighet blandas friskt i vardagstal tillsammans med allehanda svordomar, och för många utomstående kan det tyckas att
+                    folk från Sumprakan inte verkar gilla någon dom stöter på; men sanningen är den som sagt att denna hårda jargong är endast
+                    vardagstal och behöver inte betyda mer än så. Sant är det att när nån på Sumpmål skäller ut en kamrat för att få något gjort,
+                    så betyder det sällan inte mer än när andra Hunaläningar i samma situation hade bett snällt om hjälp.
+                </p>
+            </div>
+        </section>
+    </div>
+</body>
+</html>
+```
